--- a/MyWebsite/Views/BudgetEntries/Details.cshtml
+++ b/MyWebsite/Views/BudgetEntries/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyWebsite.Models.BudgetLimit
+﻿@model MyWebsite.Models.BudgetEntries
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>BudgetLimit</h4>
+    <h4>BudgetEntries</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +29,12 @@
             @Html.DisplayFor(model => model.RentLimit)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.EntertainmentLimit)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.EntertainmentLimit)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.BillsLimit)
         </dt>
         <dd>
@@ -41,16 +47,28 @@
             @Html.DisplayFor(model => model.GasLimit)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.EntertainmentLimit)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.EntertainmentLimit)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.MiscLimit)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.MiscLimit)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Type)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Type)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Cost)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Cost)
         </dd>
     </dl>
 </div>
