Made changes to database Added different types of budgets the can be added to

--- a/MyWebsite/Views/BudgetEntries/Delete.cshtml
+++ b/MyWebsite/Views/BudgetEntries/Delete.cshtml
@@ -54,10 +54,10 @@
             @Html.DisplayFor(model => model.MiscLimit)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.TypeOfBudget)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Type)
+            @Html.DisplayFor(model => model.TypeOfBudget)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
