--- a/MyWebsite/Views/BudgetEntries/Create.cshtml
+++ b/MyWebsite/Views/BudgetEntries/Create.cshtml
@@ -48,9 +48,9 @@
                 <span asp-validation-for="MiscLimit" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
-                <span asp-validation-for="Type" class="text-danger"></span>
+                <label asp-for="TypeOfBudget" class="control-label"></label>
+                <select asp-for="TypeOfBudget" class="form-control"></select>
+                <span asp-validation-for="TypeOfBudget" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
