--- a/MyWebsite/Views/BudgetEntries/Index.cshtml
+++ b/MyWebsite/Views/BudgetEntries/Index.cshtml
@@ -1,89 +1,245 @@
-﻿@model IEnumerable<MyWebsite.Models.BudgetEntries>
+﻿@using Microsoft.AspNetCore.Identity
+@using MyWebsite.Models
+@model MyWebsite.Models.BudgetEntries
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+@{ string stringSet = "SET";
+    string user = User.Identity.Name;}
 
-@{
-    ViewData["Title"] = "Index";
+<h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
+
+<div style="text-align:center; margin-top:70px;">@{ Html.RenderPartial("_LoginPartial"); }</div>
+
+@if (!SignInManager.IsSignedIn(User))
+{
+    <p style="text-align:center; font-size:20px;">Please log in or register first to use the app.</p>
+}
+else
+{
+    <div style="border-bottom: 1px dotted #76ff03;"></div>
+
+    <div class="container">
+        @*GROCERY*@
+        <div class="row">
+            <form class="col m4" style="margin-right:100px;">
+                <h5 style="margin-top:77px; font-weight:bold;">Set Grocery Budget</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
+                    <div style="margin-top:23px;">@Html.ActionLink(@stringSet, "Budget", "Projects", null, new { @class = "yellow-button" })</div>
+                    <div id="grocery-graph" style="display:none;"><p>Display grocery graph - Limit: </p></div>
+                </div>
+            </form>
+            <form asp-action="Add" class="col m4">
+                <h5 style="margin-top:25px; font-weight:bold;">Add Transaction</h5>
+                <h5 style="margin-top:25px">Item</h5>
+                <div class="input-field">
+                    <input name="Description" placeholder="Apples" id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                </div>
+                <h5 style="margin-top:25px;">Price</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    @Html.Hidden("Email", user)
+                    @Html.HiddenFor(x => x.Description)
+                    @Html.HiddenFor(x => x.Cost)
+                    @Html.Hidden("TypeOfBudget", 1)
+                    <div style="margin-top:23px;"><input type="submit" value="ADD" class="yellow-button" /></div>
+                </div>
+            </form>
+        </div>
+        @*RENT*@
+        <div style="border-bottom: 1px dotted #76ff03;"></div>
+        <div class="row">
+            <form class="col m4" style="margin-right:100px;">
+                <h5 style="margin-top:77px; font-weight:bold;">Set Rent Budget</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
+                    <div style="margin-top:23px;">@Html.ActionLink(@stringSet, "Budget", "Projects", null, new { @class = "yellow-button" })</div>
+                    <div id="grocery-graph" style="display:none;"><p>Display Rent graph - Limit: </p></div>
+                </div>
+            </form>
+            <form asp-action="Add" class="col m4">
+                <h5 style="margin-top:25px; font-weight:bold;">Add Transaction</h5>
+                <h5 style="margin-top:25px">Item</h5>
+                <div class="input-field">
+                    <input name="Description" placeholder="June Rent" id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                </div>
+                <h5 style="margin-top:25px;">Price</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    @Html.Hidden("Email", user)
+                    @Html.HiddenFor(x => x.Description)
+                    @Html.HiddenFor(x => x.Cost)
+                    @Html.Hidden("TypeOfBudget", 2)
+                    <div style="margin-top:23px;"><input type="submit" value="ADD" class="yellow-button" /></div>
+                </div>
+            </form>
+        </div>
+        @*ENTERTAINMENT*@
+        <div style="border-bottom: 1px dotted #76ff03;"></div>
+        <div class="row">
+            <form class="col m4" style="margin-right:100px;">
+                <h5 style="margin-top:77px; font-weight:bold;">Set Entertainment Budget</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
+                    <div style="margin-top:23px;">@Html.ActionLink(@stringSet, "Budget", "Projects", null, new { @class = "yellow-button" })</div>
+                    <div id="grocery-graph" style="display:none;"><p>Display Entertainment graph - Limit: </p></div>
+                </div>
+            </form>
+            <form asp-action="Add" class="col m4">
+                <h5 style="margin-top:25px; font-weight:bold;">Add Transaction</h5>
+                <h5 style="margin-top:25px">Item</h5>
+                <div class="input-field">
+                    <input name="Description" placeholder="Concert" id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                </div>
+                <h5 style="margin-top:25px;">Price</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    @Html.Hidden("Email", user)
+                    @Html.HiddenFor(x => x.Description)
+                    @Html.HiddenFor(x => x.Cost)
+                    @Html.Hidden("TypeOfBudget", 3)
+                    <div style="margin-top:23px;"><input type="submit" value="ADD" class="yellow-button" /></div>
+                </div>
+            </form>
+        </div>
+        @*BILLS*@
+        <div style="border-bottom: 1px dotted #76ff03;"></div>
+        <div class="row">
+            <form class="col m4" style="margin-right:100px;">
+                <h5 style="margin-top:77px; font-weight:bold;">Set Bills Budget</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
+                    <div style="margin-top:23px;">@Html.ActionLink(@stringSet, "Budget", "Projects", null, new { @class = "yellow-button" })</div>
+                    <div id="grocery-graph" style="display:none;"><p>Display bills graph - Limit: </p></div>
+                </div>
+            </form>
+            <form asp-action="Add" class="col m4">
+                <h5 style="margin-top:25px; font-weight:bold;">Add Transaction</h5>
+                <h5 style="margin-top:25px">Item</h5>
+                <div class="input-field">
+                    <input name="Description" placeholder="Electric" id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                </div>
+                <h5 style="margin-top:25px;">Price</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    @Html.Hidden("Email", user)
+                    @Html.HiddenFor(x => x.Description)
+                    @Html.HiddenFor(x => x.Cost)
+                    @Html.Hidden("TypeOfBudget", 4)
+                    <div style="margin-top:23px;"><input type="submit" value="ADD" class="yellow-button" /></div>
+                </div>
+            </form>
+        </div>
+        @*GAS*@
+        <div style="border-bottom: 1px dotted #76ff03;"></div>
+        <div class="row">
+            <form class="col m4" style="margin-right:100px;">
+                <h5 style="margin-top:77px; font-weight:bold;">Set Gas Budget</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
+                    <div style="margin-top:23px;">@Html.ActionLink(@stringSet, "Budget", "Projects", null, new { @class = "yellow-button" })</div>
+                    <div id="grocery-graph" style="display:none;"><p>Display Gas graph - Limit: </p></div>
+                </div>
+            </form>
+            <form asp-action="Add" class="col m4">
+                <h5 style="margin-top:25px; font-weight:bold;">Add Transaction</h5>
+                <h5 style="margin-top:25px">Item</h5>
+                <div class="input-field">
+                    <input name="Description" placeholder="Bought Gas" id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                </div>
+                <h5 style="margin-top:25px;">Price</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    @Html.Hidden("Email", user)
+                    @Html.HiddenFor(x => x.Description)
+                    @Html.HiddenFor(x => x.Cost)
+                    @Html.Hidden("TypeOfBudget", 5)
+                    <div style="margin-top:23px;"><input type="submit" value="ADD" class="yellow-button" /></div>
+                </div>
+            </form>
+        </div>
+        @*MISC*@
+        <div style="border-bottom: 1px dotted #76ff03;"></div>
+        <div class="row">
+            <form class="col m4" style="margin-right:100px;">
+                <h5 style="margin-top:77px; font-weight:bold;">Set Miscellaneous Budget</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" class="validate">
+                    <div style="margin-top:23px;">@Html.ActionLink(@stringSet, "Budget", "Projects", null, new { @class = "yellow-button" })</div>
+                    <div id="grocery-graph" style="display:none;"><p>Display miscellaneous graph - Limit: </p></div>
+                </div>
+            </form>
+            <form asp-action="Add" class="col m4">
+                <h5 style="margin-top:25px; font-weight:bold;">Add Transaction</h5>
+                <h5 style="margin-top:25px">Item</h5>
+                <div class="input-field">
+                    <input name="Description" placeholder="Garden Supplies" id="purchase-item" style="margin-top: 25px;" type="text" class="validate">
+                </div>
+                <h5 style="margin-top:25px;">Price</h5>
+                <div class="input-field">
+                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                    <input name="Cost" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    @Html.Hidden("Email", user)
+                    @Html.HiddenFor(x => x.Description)
+                    @Html.HiddenFor(x => x.Cost)
+                    @Html.Hidden("TypeOfBudget", 6)
+                    <div style="margin-top:23px;"><input type="submit" value="ADD" class="yellow-button" /></div>
+                </div>
+            </form>
+        </div>
+    </div>
 }
 
-<h2>Index</h2>
+<style>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Email)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.GroceryLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RentLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EntertainmentLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.BillsLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.GasLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.MiscLimit)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Type)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Cost)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GroceryLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RentLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EntertainmentLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BillsLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GasLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MiscLimit)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cost)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+    input[type=text]:not(.browser-default) {
+        background-color: black !important;
+        color: #76ff03 !important;
+        font-size: 30px;
+    }
+
+    input.valid[type=number]:not(.browser-default),
+    input.valid[type=number]:not(.browser-default):focus,
+    input.valid[type=text]:not(.browser-default),
+    input.valid[type=text]:not(.browser-default):focus,
+    #budget-limit-amount,
+    #purchase-item {
+        border-bottom: 2px solid #cfd8dc !important;
+        color: #76ff03;
+        font-size: 30px;
+    }
+
+    input[type=search]:not(.browser-default):focus:not([readonly]) {
+        color: rgba(255, 255, 255, 0.2)   !important;
+        /*default white zero and white underline*/
+    }
+
+    .yellow-button {
+        border-radius: 0px;
+        border: 1px solid #cfd8dc;
+        color: #cfd8dc;
+        padding: 15px;
+        background-color: black;
+        font-weight: 400;
+        font-size: 20px;
+    }
+
+    .yellow-button:hover {
+        color: black !important;
+        background-color: #76ff03;
+        border: none;
+    }
+</style>
+
