--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -22,7 +22,7 @@
                 <div class="card-image">
                     <img src="~/images/stars.jpg" />
                     <span class="card-title" style="font-size:30px;">Budget App</span>
-                    <a href="@Url.Action("Index", "BudgetEntries")" class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
+                    <a href="@Url.Action("Index", "BudgetTransactions")" class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
                 <div class="card-content black-text">
                     <p>Some text explaining what it is will go here... Some text explaining what it is will go here...</p>
