--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -3,13 +3,14 @@
 <h3 style="margin:100px;">Homepage...</h3>
 <h4>Some text will be here</h4>
 
-
-<ul class="collapsible">
-    <li>
-        <div class="collapsible-header black"><i class="material-icons" style="font-size:30px; padding-top:5px;">queue</i>Lagoon Nebula</div>
-        <div class="collapsible-body"><span>@lagoonNebulaText</span></div>
-    </li>
-</ul>
+<div>
+    <ul class="collapsible">
+        <li>
+            <div class="collapsible-header black"><i class="material-icons" style="font-size:30px; padding-top:5px;">queue</i>Lagoon Nebula</div>
+            <div class="collapsible-body"><span>@lagoonNebulaText</span></div>
+        </li>
+    </ul>
+</div>
 
 
 @*Main Image*@
@@ -17,46 +18,10 @@
     <div class="parallax"><img src="~/images/nebula.png" /></div>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit auctor augue, eu interdum orci iaculis eget. Phasellus condimentum tellus at erat sollicitudin, nec tincidunt lorem cursus. Aliquam eu vestibulum sapien. Nullam id nisl tristique, ultricies nisl ut, pellentesque ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id libero turpis. Etiam porta sem eu urna convallis, et aliquet augue condimentum. Quisque lobortis porta volutpat. Nam laoreet pellentesque turpis non scelerisque. Praesent nulla velit, volutpat at massa placerat, accumsan bibendum mi. Duis eleifend, massa malesuada egestas euismod, nibh odio commodo tortor, ac euismod ante ipsum nec tellus. Mauris at sodales orci, id volutpat orci. Aliquam gravida feugiat lectus, vitae lacinia nibh blandit ut. Maecenas ullamcorper sapien et lacus varius iaculis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit auctor augue, eu interdum orci iaculis eget. Phasellus condimentum tellus at erat sollicitudin, nec tincidunt lorem cursus. Aliquam eu vestibulum sapien. Nullam id nisl tristique, ultricies nisl ut, pellentesque ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id libero turpis. Etiam porta sem eu urna convallis, et aliquet augue condimentum. Quisque lobortis porta volutpat. Nam laoreet pellentesque turpis non scelerisque. Praesent nulla velit, volutpat at massa placerat, accumsan bibendum mi. Duis eleifend, massa malesuada egestas euismod, nibh odio commodo tortor, ac euismod ante ipsum nec tellus. Mauris at sodales orci, id volutpat orci. Aliquam gravida feugiat lectus, vitae lacinia nibh blandit ut. Maecenas ullamcorper sapien et lacus varius iaculis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit auctor augue, eu interdum orci iaculis eget. Phasellus condimentum tellus at erat sollicitudin, nec tincidunt lorem cursus. Aliquam eu vestibulum sapien. Nullam id nisl tristique, ultricies nisl ut, pellentesque ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id libero turpis. Etiam porta sem eu urna convallis, et aliquet augue condimentum. Quisque lobortis porta volutpat. Nam laoreet pellentesque turpis non scelerisque. Praesent nulla velit, volutpat at massa placerat, accumsan bibendum mi. Duis eleifend, massa malesuada egestas euismod, nibh odio commodo tortor, ac euismod ante ipsum nec tellus. Mauris at sodales orci, id volutpat orci. Aliquam gravida feugiat lectus, vitae lacinia nibh blandit ut. Maecenas ullamcorper sapien et lacus varius iaculis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit auctor augue, eu interdum orci iaculis eget. Phasellus condimentum tellus at erat sollicitudin, nec tincidunt lorem cursus. Aliquam eu vestibulum sapien. Nullam id nisl tristique, ultricies nisl ut, pellentesque ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id libero turpis. Etiam porta sem eu urna convallis, et aliquet augue condimentum. Quisque lobortis porta volutpat. Nam laoreet pellentesque turpis non scelerisque. Praesent nulla velit, volutpat at massa placerat, accumsan bibendum mi. Duis eleifend, massa malesuada egestas euismod, nibh odio commodo tortor, ac euismod ante ipsum nec tellus. Mauris at sodales orci, id volutpat orci. Aliquam gravida feugiat lectus, vitae lacinia nibh blandit ut. Maecenas ullamcorper sapien et lacus varius iaculis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit auctor augue, eu interdum orci iaculis eget. Phasellus condimentum tellus at erat sollicitudin, nec tincidunt lorem cursus. Aliquam eu vestibulum sapien. Nullam id nisl tristique, ultricies nisl ut, pellentesque ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id libero turpis. Etiam porta sem eu urna convallis, et aliquet augue condimentum. Quisque lobortis porta volutpat. Nam laoreet pellentesque turpis non scelerisque. Praesent nulla velit, volutpat at massa placerat, accumsan bibendum mi. Duis eleifend, massa malesuada egestas euismod, nibh odio commodo tortor, ac euismod ante ipsum nec tellus. Mauris at sodales orci, id volutpat orci. Aliquam gravida feugiat lectus, vitae lacinia nibh blandit ut. Maecenas ullamcorper sapien et lacus varius iaculis.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit auctor augue, eu interdum orci iaculis eget. Phasellus condimentum tellus at erat sollicitudin, nec tincidunt lorem cursus. Aliquam eu vestibulum sapien. Nullam id nisl tristique, ultricies nisl ut, pellentesque ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id libero turpis. Etiam porta sem eu urna convallis, et aliquet augue condimentum. Quisque lobortis porta volutpat. Nam laoreet pellentesque turpis non scelerisque. Praesent nulla velit, volutpat at massa placerat, accumsan bibendum mi. Duis eleifend, massa malesuada egestas euismod, nibh odio commodo tortor, ac euismod ante ipsum nec tellus. Mauris at sodales orci, id volutpat orci. Aliquam gravida feugiat lectus, vitae lacinia nibh blandit ut. Maecenas ullamcorper sapien et lacus varius iaculis.</p>
-
-<style>
-    .parallax img {
-        width: 100%;
-        opacity: 5;
-    }
-
-    .parallax {
-        height: 80%;
-    }
-
-    .collapsible {
-        width: 40%;
-        border: none !important;
-    }
-
-    .collapsible-header {
-        border-bottom: none !important;
-        font-size: 25px;
-        color: #cfd8dc;
-    }
-
-    .collapsible-body {
-        border-bottom: 1px dotted #cfd8dc;
-        font-size: 18px;
-        color: #cfd8dc;
-    }
-
-</style>
-
+<p style="margin-bottom:500px;">Some text will be here...</p>
 
 
 <script>
-
     $(document).ready(function () {
         $('.parallax').parallax();
         $('.collapsible').collapsible();
