--- a/MyWebsite/Views/Projects/Index.cshtml
+++ b/MyWebsite/Views/Projects/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
-                    <img src="~/images/stars.jpg" />
+                    <img src="~/images/darkStars.jpg" />
                     <span class="card-title" style="font-size:30px;">GitHub</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
@@ -20,9 +20,9 @@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
-                    <img src="~/images/stars.jpg" />
+                    <img src="~/images/darkStars.jpg" />
                     <span class="card-title" style="font-size:30px;">Budget App</span>
-                    <a href="@Url.Action("Index", "BudgetTransactions")" class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
+                    <a href="@Url.Action("Index", "Budgets", new { userName = User })" class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
                 <div class="card-content black-text">
                     <p>Some text explaining what it is will go here... Some text explaining what it is will go here...</p>
@@ -33,7 +33,7 @@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
-                    <img src="~/images/stars.jpg" />
+                    <img src="~/images/darkStars.jpg" />
                     <span class="card-title" style="font-size:30px;">Project Name</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
@@ -46,7 +46,7 @@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
-                    <img src="~/images/stars.jpg" />
+                    <img src="~/images/darkStars.jpg" />
                     <span class="card-title" style="font-size:30px;">Project Name</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
@@ -59,7 +59,7 @@
         <div class="col l4 m12 s12">
             <div class="card" style="width:70%; margin:70px;">
                 <div class="card-image">
-                    <img src="~/images/stars.jpg" />
+                    <img src="~/images/darkStars.jpg" />
                     <span class="card-title" style="font-size:30px;">Project Name</span>
                     <a class="btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"><i class="material-icons black-text">arrow_right</i></a>
                 </div>
