--- a/MyWebsite/Views/Shared/_BudgetLimitPartial.cshtml
+++ b/MyWebsite/Views/Shared/_BudgetLimitPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using MyWebsite.Models
-@model MyWebsite.Models.BudgetEntries
+@model IEnumerable<MyWebsite.Models.BudgetEntries>
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{string user = User.Identity.Name; }
@@ -54,68 +54,15 @@
     <div style="margin-top:23px;"><input type="submit" value="SET" class="yellow-button" /></div>
 
     @Html.Hidden("Email", user)
-    @Html.HiddenFor(x => x.GroceryLimit)
-    @Html.HiddenFor(x => x.RentLimit)
-    @Html.HiddenFor(x => x.EntertainmentLimit)
-    @Html.HiddenFor(x => x.BillsLimit)
-    @Html.HiddenFor(x => x.GasLimit)
-    @Html.HiddenFor(x => x.MiscLimit)
+    @Html.Hidden("GroceryLimit", "GroceryLimit")
+    @Html.Hidden("RentLimit", "RentLimit")
+    @Html.Hidden("EntertainmentLimit")
+    @Html.Hidden("BillsLimit", "BillsLimit")
+    @Html.Hidden("GasLimit", "GasLimit")
+    @Html.Hidden("MiscLimit", "MiscLimit")
 
 </form>
 
-
-
-
-
-
-
-
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="_BudgetLimitPartial">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GroceryLimit" class="control-label"></label>
-                <input asp-for="GroceryLimit" class="form-control" />
-                <span asp-validation-for="GroceryLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RentLimit" class="control-label"></label>
-                <input asp-for="RentLimit" class="form-control" />
-                <span asp-validation-for="RentLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EntertainmentLimit" class="control-label"></label>
-                <input asp-for="EntertainmentLimit" class="form-control" />
-                <span asp-validation-for="EntertainmentLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BillsLimit" class="control-label"></label>
-                <input asp-for="BillsLimit" class="form-control" />
-                <span asp-validation-for="BillsLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="GasLimit" class="control-label"></label>
-                <input asp-for="GasLimit" class="form-control" />
-                <span asp-validation-for="GasLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MiscLimit" class="control-label"></label>
-                <input asp-for="MiscLimit" class="form-control" />
-                <span asp-validation-for="MiscLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </form>
-    </div>
-</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
