--- a/MyWebsite/Views/Shared/_LoginPartial.cshtml
+++ b/MyWebsite/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
         <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
             <ul id="buttonInLine">
                 <li>
-                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" class="blue-grey-lighten-4-text userName">Hello @UserManager.GetUserName(User)!</a>
+                    <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage" class="blue-grey-lighten-4-text userName" style="font-size:20px;">Hello @UserManager.GetUserName(User)!</a>
                 </li>
                 <li>
                     <button type="submit" class="waves-effect waves-light btn red accent-4 redButton">Log out</button>
@@ -25,7 +25,9 @@ else
     <div class="container">
         <ul id="buttonInLine">
             <li><a asp-area="" asp-controller="Account" asp-action="Register" class="waves-effect waves-light btn red accent-4 redButton">Register</a></li>
-            <li><a asp-area="" asp-controller="Account" asp-action="Login" class="waves-effect waves-light btn red accent-4 redButton">Log in</a></li>
+            @*Html.ActionLink("Index", "Budgets", new { @class = "btn-floating halfway-fab waves-effect waves-light blue-grey lighten-4"*@
+
+            <li><a asp-area="" asp-controller="Account" asp-action="Login" asp-route-userName="@User.Identity.Name" class="waves-effect waves-light btn red accent-4 redButton">Log in</a></li>
         </ul>
     </div>
 }
