--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -1,82 +1,92 @@
-﻿@model MyWebsite.Models.BudgetProject.Budget
+﻿@model IEnumerable<MyWebsite.Models.BudgetProject.Budget>
 @using Microsoft.AspNetCore.Identity
+@using System.Linq
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+@{ var emptyBudget = Convert.ToBoolean(TempData["isBudgetEmpty"]);}
 
+@{ string user = User.Identity.Name;}
+
+
+<div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
 <h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
 
 @if (!SignInManager.IsSignedIn(User))
 {
-    <p style="text-align:center; font-size:20px; margin-top:80px;">Please log in or register first to use the app.</p>
-    <div style="text-align:center">@Html.Partial("_LoginPartial")</div>
+    <p style="text-align:center; font-size:20px; margin-top:30px;">Please log in or register first to use the app.</p>
 }
 else
 {
-    <div style="border-bottom: 1px dotted #76ff03;"></div>
+    @if (emptyBudget)
+    {
+        <div style="border-bottom: 1px dotted #76ff03;"></div>
+               
+        @*Set Budget Limit*@
+        <form method="post" action="@Url.Action("Index", "Budgets")">
+            <div style="margin-top:35px; text-align:center;"><input type="submit" value="SET" class="yellow-button" style="padding-left:200px; padding-right:200px; font-weight:bold; letter-spacing:2px;" /></div>
+            <div class="row" style="margin-top:20px; margin-left:200px; margin-right:200px;">
+                <div class="col s12 m6 l4">
+                    <h5 style="margin-top:77px; font-weight:bold;">Groceries/Food</h5>
+                    <div class="input-field">
+                        <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                        <input name="GroceryLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <h5 style="margin-top:77px; font-weight:bold;">Housing/Rent</h5>
+                    <div class="input-field">
+                        <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                        <input name="HousingLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <h5 style="margin-top:77px; font-weight:bold;">Entertainment</h5>
+                    <div class="input-field">
+                        <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                        <input name="EntLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin-top:80px; margin-left:200px; margin-right:200px;">
+                <div class="col s12 m6 l4">
+                    <h5 style="margin-top:77px; font-weight:bold;">Bills</h5>
+                    <div class="input-field">
+                        <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                        <input name="BillsLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <h5 style="margin-top:77px; font-weight:bold;">Car/Gas</h5>
+                    <div class="input-field">
+                        <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                        <input name="GasLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    </div>
+                </div>
+                <div class="col s12 m6 l4">
+                    <h5 style="margin-top:77px; font-weight:bold;">Miscellaneous Expenses</h5>
+                    <div class="input-field">
+                        <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
+                        <input name="MiscLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
+                    </div>
+                </div>
+            </div>
+            @Html.Hidden("Email", user)
+            @Html.Hidden("GroceryLimit", "GroceryLimit")
+            @Html.Hidden("HousingLimit", "HousingLimit")
+            @Html.Hidden("EntLimit", "EntLimit")
+            @Html.Hidden("BillsLimit", "BillsLimit")
+            @Html.Hidden("GasLimit", "GasLimit")
+            @Html.Hidden("MiscLimit", "MiscLimit")
+        </form>
 
-    <h5 style="text-align:center; margin-top:30px;">Set you budget limit below and click SET when finished.</h5>
+        //End of Set Budget Limit
 
-  
-    @*Set Budget Limit*@
-    <form method="post" action="@Url.Action("Index", "Budgets")">
-        <div style="margin-top:35px; text-align:center;"><input type="submit" value="SET" class="yellow-button"  style="padding-left:200px; padding-right:200px; font-weight:bold; letter-spacing:2px;"/></div>
-        <div class="row" style="margin-top:20px; margin-left:200px; margin-right:200px;">
-            <div class="col s12 m6 l4">
-                <h5 style="margin-top:77px; font-weight:bold;">Groceries/Food</h5>
-                <div class="input-field">
-                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
-                    <input name="GroceryLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <h5 style="margin-top:77px; font-weight:bold;">Housing/Rent</h5>
-                <div class="input-field">
-                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
-                    <input name="RentLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <h5 style="margin-top:77px; font-weight:bold;">Entertainment</h5>
-                <div class="input-field">
-                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
-                    <input name="EntLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                </div>
-            </div>
-        </div>
-        <div class="row" style="margin-top:80px; margin-left:200px; margin-right:200px;">
-            <div class="col s12 m6 l4">
-                <h5 style="margin-top:77px; font-weight:bold;">Bills</h5>
-                <div class="input-field">
-                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
-                    <input name="BillsLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <h5 style="margin-top:77px; font-weight:bold;">Car/Gas</h5>
-                <div class="input-field">
-                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
-                    <input name="GasLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <h5 style="margin-top:77px; font-weight:bold;">Miscellaneous Expenses</h5>
-                <div class="input-field">
-                    <i class="material-icons prefix" style="margin-top:30px; color:#76ff03;">attach_money</i>
-                    <input name="MiscLimit" placeholder="0" id="budget-limit-amount" style="margin-top: 25px;" type="number" step="0.01" class="validate">
-                </div>
-            </div>
-        </div>
-        @Html.Hidden("Email", User)
-        @Html.Hidden("GroceryLimit", "GroceryLimit")
-        @Html.Hidden("RentLimit", "RentLimit")
-        @Html.Hidden("EntLimit", "EntLimit")
-        @Html.Hidden("BillsLimit", "BillsLimit")
-        @Html.Hidden("GasLimit", "GasLimit")
-        @Html.Hidden("MiscLimit", "MiscLimit")
-    </form>
-  
-    //End of Set Budget Limit
+    }
+    else
+    {
+        <p>Your budget is not empty...</p>
+    }
 
 }
 
